<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            style="@style/HeadStyle"
            android:background="@color/category_home"
            android:text="@string/category_home" />

        <TextView
            android:id="@+id/player"
            style="@style/HeadStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/category_home"
            android:text="@string/category_player" />
<!--
    I will be using the android api public class MediaPlayer to define
    the player buttons and play all the media files stored on the device.
    https://developer.android.com/reference/android/media/MediaPlayer.html
-->
    </LinearLayout>

    <TextView
        android:id="@+id/playingNow"
        style="@style/CategoryStyle"
        android:background="@color/category_playingnow"
        android:text="@string/category_playingNow" />

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />


    <TextView
        android:id="@+id/songs"
        style="@style/CategoryStyle"
        android:background="@color/category_songs"
        android:text="@string/category_songs" />

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_albums"
        android:text="@string/category_albums" />

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:background="@color/category_playlists"
        android:text="@string/category_playlists" />

</LinearLayout>